<resources>
    <string name="app_name">NTMY</string>
    <string name="alt_logo">Logo Image</string>
    <string name="app_name_long">Nice To Meet You</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="password_forget">Forgot password?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_nav_events">Events</string>
    <string name="today_event">Today\'s Events</string>
    <string name="enrolled_event">Enrolled Events</string>
    <string name="future_event">Future Events</string>
    <string name="creator">Creator</string>
    <string name="description">Description</string>
    <string name="facilities">Facilities</string>
    <string name="users_met">Users Met</string>
    <string name="user_photo">User\'s Photo</string>
    <string name="contacts">Contacts</string>
    <string name="action_user_add_contact">Add to contacts</string>
    <string name="progress_overlay">Content Loading</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="no_users">You haven\'t met any users yet.</string>
    <string name="overlay">Overlay</string>
    <string name="show_more">Show More</string>
    <string name="not_assigned">Not assigned yet.</string>
    <string name="name">Name</string>
    <string name="datetime">Date and Time</string>
    <string name="save">Save</string>
    <string name="no_facilities">This event has no facilities.</string>
</resources>
